--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -1,1 +1,24 @@
-<p>user works!</p>
+<h2>Usuarios</h2>
+
+<div class="row">
+  <div class="col-12">
+    <table>
+      <thead>
+        <tr>
+          <th *ngFor="let title of headers" class="text-center">{{ title }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users">
+          <td>
+            {{ user.name }}
+          </td>
+          <td class="text-center">
+            <button>Editar</button>
+            <button>Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
