--- a/src/app/shared/components/form/form.component.html
+++ b/src/app/shared/components/form/form.component.html
@@ -1,1 +1,78 @@
-<p>form works!</p>
+<form [formGroup]="form" novalidate autocomplete="off">
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-4">
+      <label>Nombre:</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Ingresa el nombre"
+        formControlName="name"
+        [ngClass]="{
+          'is-invalid': form.invalid && fc['name'].errors && fc['name'].touched
+        }"
+      />
+      <div
+        *ngIf="form.invalid && fc['name'].errors && fc['name'].touched"
+        class="invalid-feedback"
+      >
+        <div *ngIf="fc['name'].errors['required']">
+          El nombre es obligatorio
+        </div>
+      </div>
+    </div>
+
+    <div class="col-2"></div>
+
+    <div *ngIf="module === 'usuario'" class="col-4">
+      <label>Email: </label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Ingresa el email"
+        formControlName="email"
+        [ngClass]="{
+          'is-invalid':
+            form.invalid && fc['email'].errors && fc['email'].touched
+        }"
+      />
+      <div
+        *ngIf="form.invalid && fc['email'].errors && fc['email'].touched"
+        class="invalid-feedback"
+      >
+        <div *ngIf="fc['email'].errors['required']">
+          El email es obligatorio
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row pt-3 pb-5">
+    <div class="col-1"></div>
+    <div *ngIf="module === 'usuario'" class="col-4">
+      <label>Rol:</label>
+      <select
+        placeholder="Ingresa la url de la imagen"
+        formControlName="role"
+        [ngClass]="{ 'is-invalid': fc['role'].errors && fc['email'].touched }"
+      >
+        <option value="Administrador">Administrador</option>
+        <option value="Gerente">Gerente</option>
+        <option value="Lider célula">Lider célula</option>
+      </select>
+
+      <div
+        *ngIf="fc['role'].errors && fc['email'].touched"
+        class="invalid-feedback"
+      >
+        <div *ngIf="fc['role'].errors['required']">El rol es obligatorio</div>
+      </div>
+    </div>
+
+    <div class="col-2"></div>
+
+    <!-- <div class="col-4 text-center">
+      <label>Defensa: </label>
+    </div> -->
+  </div>
+</form>
