--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,12 +1,14 @@
 <div class="modal-overlay" id="modal-overlay"></div>
 
 <div class="modal">
-  <h3>Título</h3>
-  <app-form></app-form>
+  <h3>{{ title }} {{ module }}</h3>
+
+  <app-form [module]="module" [data]="data" (sendFormValues)="listenForm($event)"></app-form>
+
   <div class="row">
     <div class="col-12">
         <button class="modal-buttons" (click)="cancel()">Cancelar</button>
-      <button class="modal-buttons" (click)="save()">Guardar</button>
+      <button class="modal-buttons" (click)="save()" [disabled]="disabled">Guardar</button>
     </div>
   </div>
 </div>
