--- a/src/app/shared/components/modal/modal.component.scss
+++ b/src/app/shared/components/modal/modal.component.scss
@@ -1,13 +1,14 @@
 .modal {
+  background: white;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.25);
   border-radius: 0.25rem;
-  position: fixed;
   top: 50%;
   left: 50%;
+  padding: 25px;
+  position: fixed;
   transform: translate(-50%, -50%);
-  background: white;
-  width: 500px;
+  width: 600px;
   z-index: 100;
 }
 
