--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,105 +22,81 @@ body {
   flex-wrap: wrap;
 }
 
-.col-1 {
+.col {
   flex: 0 0 auto;
-  width: 8.33333333%;
-}
-
-.col-2 {
-  flex: 0 0 auto;
-  width: 16.66666667%;
-}
-
-.col-3 {
-  flex: 0 0 auto;
-  width: 25%;
-}
-
-.col-4 {
-  flex: 0 0 auto;
-  width: 33.33333333%;
-}
-
-.col-5 {
-  flex: 0 0 auto;
-  width: 41.66666667%;
-}
-
-.col-6 {
-  flex: 0 0 auto;
-  width: 50%;
-}
-
-.col-7 {
-  flex: 0 0 auto;
-  width: 58.33333333%;
-}
-
-.col-8 {
-  flex: 0 0 auto;
-  width: 66.66666667%;
-}
-
-.col-9 {
-  flex: 0 0 auto;
-  width: 75%;
-}
-
-.col-10 {
-  flex: 0 0 auto;
-  width: 83.33333333%;
-}
-
-.col-11 {
-  flex: 0 0 auto;
-  width: 91.66666667%;
-}
-
-.col-12 {
-  flex: 0 0 auto;
-  width: 100%;
+  &-1 {
+    width: 8.33333333%;
+  }
+  &-2 {
+    width: 16.66666667%;
+  }
+  &-3 {
+    width: 25%;
+  }
+  &-4 {
+    width: 33.33333333%;
+  }
+  &-5 {
+    width: 41.66666667%;
+  }
+  &-6 {
+    width: 50%;
+  }
+  &-7 {
+    width: 58.33333333%;
+  }
+  &-8 {
+    width: 66.66666667%;
+  }
+  &-9 {
+    width: 75%;
+  }
+  &-10 {
+    width: 83.33333333%;
+  }
+  &-11 {
+    width: 91.66666667%;
+  }
+  &-12 {
+    width: 100%;
+  }
 }
 
 // Padding
-.pt-1 {
-  padding-top: 0.25rem;
+.pt {
+  &-1 {
+    padding-top: 0.25rem;
+  }
+  &-2 {
+    padding-top: 0.5rem;
+  }
+  &-3 {
+    padding-top: 1rem;
+  }
+  &-4 {
+    padding-top: 1.5rem;
+  }
+  &-5 {
+    padding-top: 3rem;
+  }
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-3 {
-  padding-top: 1rem;
-}
-
-.pt-4 {
-  padding-top: 1.5rem;
-}
-
-.pt-5 {
-  padding-top: 3rem;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pb-3 {
-  padding-bottom: 1rem;
-}
-
-.pb-4 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-5 {
-  padding-bottom: 3rem;
+.pb {
+  &-1 {
+    padding-bottom: 0.25rem;
+  }
+  &-2 {
+    padding-bottom: 0.5rem;
+  }
+  &-3 {
+    padding-bottom: 1rem;
+  }
+  &-4 {
+    padding-bottom: 1.5rem;
+  }
+  &-5 {
+    padding-bottom: 3rem;
+  }
 }
 
 // Tabla
@@ -171,6 +147,18 @@ td > button {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.invalid-feedback {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 87.5%;
+  color: #f46a6a !important;
+}
+
+.form-control.is-invalid,
+.was-validated .form-control:invalid {
+  border-color: #f46a6a !important;
+}
+
 // Botones
 .btn {
   display: inline-block;
@@ -200,4 +188,39 @@ td > button {
   color: #fff;
   background-color: #6658f3;
   border-color: #6658f3;
+}
+
+.btn-light {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+// Modal
+.modal {
+  background: white;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  border-radius: 0.25rem;
+  top: 50%;
+  left: 50%;
+  padding: 25px;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  z-index: 100;
+}
+
+.modal-overlay {
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+}
+
+.modal-buttons {
+  float: right;
+  margin-left: 3%;
 }
