--- a/src/app/modules/role/components/role-form/role-form.component.html
+++ b/src/app/modules/role/components/role-form/role-form.component.html
@@ -1,20 +1,20 @@
-<div class="modal-overlay" id="modal-overlay"></div>
+<!-- <div class="modal-overlay" id="modal-overlay"></div> -->
 
-<div class="modal">
+<div>
   <div class="row">
     <div class="col-10">
-      <h3>{{ data !== undefined ? 'Editar' : 'Crear'}} rol</h3>
+      <h3>{{ title }}</h3>
     </div>
-    <div class="col-2">
+    <!-- <div class="col-2">
       <button class="btn btn-ligth" style="float: right" (click)="cancel()">X</button>
-    </div>
+    </div> -->
   </div>
 
   <div class="row">
     <div class="col-12">
       <form [formGroup]="form" novalidate autocomplete="off">
         <div class="row">
-          <div class="col-11">
+          <div class="col-6">
             <label>Nombre:</label>
             <input
               type="text"
@@ -42,16 +42,18 @@
 
   <div class="row pt-3 pb-3">
     <div class="col-12">
-      <button class="btn btn-global modal-buttons" (click)="cancel()">
-        Cancelar
-      </button>
       <button
-        class="btn btn-global modal-buttons"
-        (click)="save()"
+        class="btn btn-global"
+        (click)="submit()"
         [disabled]="disabled"
+        style="margin-right: 3%;"
       >
         Guardar
       </button>
+
+      <a class="btn btn-global" href="rol" >
+        Cancelar
+      </a>
     </div>
   </div>
 </div>
