--- a/src/app/modules/role/components/role/role.component.html
+++ b/src/app/modules/role/components/role/role.component.html
@@ -11,9 +11,9 @@
   </div>
   <div class="col-3"></div>
   <div class="col-1">
-    <button class="btn btn-global text-center" (click)="createRole()">
+    <a class="btn btn-global text-center" href="rol/nuevo">
       + Nuevo
-    </button>
+    </a>
   </div>
 </div>
 
@@ -31,7 +31,7 @@
             {{ role.name }}
           </td>
           <td class="text-center">
-              <button class="btn btn-global" (click)="editRole(role)">Editar</button>
+              <a class="btn btn-global" [routerLink]="['/rol/editar', role?.id]">Editar</a>
               <button class="btn btn-global" (click)="deleteRole(role?.id)">Eliminar</button>
           </td>
         </tr>
