--- a/src/app/modules/user/components/user-form/user-form.component.html
+++ b/src/app/modules/user/components/user-form/user-form.component.html
@@ -1,22 +1,22 @@
-<div class="modal-overlay" id="modal-overlay"></div>
+<!-- <div class="modal-overlay" id="modal-overlay"></div> -->
 
-<div class="modal">
+<div>
   <div class="row">
     <div class="col-10">
-      <h3>{{ data !== undefined ? "Editar" : "Crear" }} usuario</h3>
+      <h3>{{ title }}</h3>
     </div>
-    <div class="col-2">
+    <!-- <div class="col-2">
       <button class="btn btn-ligth" style="float: right" (click)="cancel()">
         X
       </button>
-    </div>
+    </div> -->
   </div>
 
   <div class="row">
     <div class="col-12">
       <form [formGroup]="form" novalidate autocomplete="off">
         <div class="row">
-          <div class="col-11">
+          <div class="col-3">
             <label>Nombre:</label>
             <input
               type="text"
@@ -38,7 +38,9 @@
             </div>
           </div>
 
-          <div class="col-11 pt-3">
+          <div class="col-1"></div>
+
+          <div class="col-3">
             <label>Email: </label>
             <input
               type="text"
@@ -63,31 +65,33 @@
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-12 pt-3">
-          <label>Rol:</label>
-          <select
-            class="form-control minimal"
-            name="roles"
-            formControlName="role"
-            [ngClass]="{
-              'is-invalid': fc['role'].errors && fc['email'].touched
-            }"
-          >
-            <option value="" disabled selected hidden>Escoja un rol</option>
-            <option *ngFor="let role of roles" [value]="role.name">{{ role.name }}</option>
-            <!-- <option value="Administrador">Administrador</option>
-            <option value="Gerente">Gerente</option>
-            <option value="Lider célula">Lider célula</option> -->
-          </select>
+          <div class="col-1"></div>
 
-          <div
-            *ngIf="fc['role'].errors && fc['role'].touched"
-            class="invalid-feedback"
-          >
-            <div *ngIf="fc['role'].errors['required']">
-              El rol es obligatorio
+          <div class="col-3">
+            <label>Rol:</label>
+            <select
+              class="form-control minimal"
+              name="roles"
+              formControlName="role"
+              [ngClass]="{
+                'is-invalid': fc['role'].errors && fc['email'].touched
+              }"
+            >
+              <option value="" disabled selected hidden>Escoja un rol</option>
+              <option *ngFor="let role of roles" [value]="role.name">{{ role.name }}</option>
+              <!-- <option value="Administrador">Administrador</option>
+              <option value="Gerente">Gerente</option>
+              <option value="Lider célula">Lider célula</option> -->
+            </select>
+  
+            <div
+              *ngIf="fc['role'].errors && fc['role'].touched"
+              class="invalid-feedback"
+            >
+              <div *ngIf="fc['role'].errors['required']">
+                El rol es obligatorio
+              </div>
             </div>
           </div>
         </div>
@@ -97,16 +101,17 @@
 
   <div class="row pt-3 pb-3">
     <div class="col-12">
-      <button class="btn btn-global modal-buttons" (click)="cancel()">
-        Cancelar
-      </button>
       <button
-        class="btn btn-global modal-buttons"
-        (click)="save()"
+        class="btn btn-global"
+        (click)="submit()"
         [disabled]="disabled"
+        style="margin-right: 3%;"
       >
         Guardar
       </button>
+      <a class="btn btn-global" href="usuario">
+        Cancelar
+      </a>
     </div>
   </div>
 </div>
