--- a/src/app/modules/role/components/role/role.component.html
+++ b/src/app/modules/role/components/role/role.component.html
@@ -26,7 +26,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let role of roles | searchFilter: searchQuery">
+        <tr *ngFor="let role of roles | searchRole: searchQuery">
           <td>
             {{ role.name }}
           </td>
