Pruebas para componentes de rol

--- a/src/app/modules/role/components/role/role.component.html
+++ b/src/app/modules/role/components/role/role.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="col-3"></div>
   <div class="col-1">
-    <a class="btn btn-global text-center" href="rol/nuevo">
+    <a class="btn btn-global text-center" href="/rol/nuevo">
       + Nuevo
     </a>
   </div>
