--- a/src/app/modules/user/components/user-form/user-form.component.html
+++ b/src/app/modules/user/components/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="modal-overlay" id="modal-overlay"></div> -->
 
-<div>
+<div class="form">
   <div class="row">
     <div class="col-10">
       <h3>{{ title }}</h3>
@@ -16,7 +16,7 @@
     <div class="col-12">
       <form [formGroup]="form" novalidate autocomplete="off">
         <div class="row">
-          <div class="col-3">
+          <div class="col-11">
             <label>Nombre:</label>
             <input
               type="text"
@@ -38,9 +38,7 @@
             </div>
           </div>
 
-          <div class="col-1"></div>
-
-          <div class="col-3">
+          <div class="col-11 pt-3">
             <label>Email: </label>
             <input
               type="text"
@@ -66,9 +64,7 @@
             </div>
           </div>
 
-          <div class="col-1"></div>
-
-          <div class="col-3">
+          <div class="col-12 pt-3">
             <label>Rol:</label>
             <select
               class="form-control minimal"
@@ -101,17 +97,18 @@
 
   <div class="row pt-3 pb-3">
     <div class="col-12">
+      <a class="btn btn-global modal-buttons" href="usuario">
+        Cancelar
+      </a>
+
       <button
-        class="btn btn-global"
+        class="btn btn-global modal-buttons"
         (click)="submit()"
         [disabled]="disabled"
         style="margin-right: 3%;"
       >
         Guardar
       </button>
-      <a class="btn btn-global" href="usuario">
-        Cancelar
-      </a>
     </div>
   </div>
 </div>
