--- a/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
+++ b/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
@@ -1,4 +1,4 @@
-.modal {
+.confirmation-modal {
   background: white;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.25);
@@ -8,7 +8,7 @@
   padding: 25px;
   position: fixed;
   transform: translate(-50%, -50%);
-  width: 600px;
+  width: 300px;
   z-index: 100;
 }
 
