Navbar, control de params en editar y correcciones

--- a/src/app/modules/role/components/role-form/role-form.component.html
+++ b/src/app/modules/role/components/role-form/role-form.component.html
@@ -10,12 +10,12 @@
     </div> -->
   </div>
 
-  <div class="row">
+  <div class="row pt-3">
     <div class="col-12">
       <form [formGroup]="form" novalidate autocomplete="off">
         <div class="row">
           <div class="col-11">
-            <label>Nombre:</label>
+            <label>Nombre:</label> <br><br>
             <input
               type="text"
               class="form-control"
