--- a/src/app/modules/role/components/role/role.component.html
+++ b/src/app/modules/role/components/role/role.component.html
@@ -30,7 +30,7 @@
           <td>
             {{ role.name }}
           </td>
-          <td class="text-center">
+          <td class="text-center pt-3 pb-3">
               <a class="btn btn-global" [routerLink]="['/rol/editar', role?.id]">Editar</a>
               <button class="btn btn-global" (click)="deleteRole(role)">Eliminar</button>
           </td>
