--- a/src/app/modules/user/components/user-form/user-form.component.html
+++ b/src/app/modules/user/components/user-form/user-form.component.html
@@ -12,12 +12,12 @@
     </div> -->
   </div>
 
-  <div class="row">
+  <div class="row pt-3">
     <div class="col-12">
       <form [formGroup]="form" novalidate autocomplete="off">
         <div class="row">
           <div class="col-11">
-            <label>Nombre:</label>
+            <label>Nombre:</label><br><br>
             <input
               type="text"
               class="form-control"
@@ -39,7 +39,7 @@
           </div>
 
           <div class="col-11 pt-3">
-            <label>Email: </label>
+            <label>Email: </label> <br><br>
             <input
               type="text"
               class="form-control"
@@ -65,7 +65,7 @@
           </div>
 
           <div class="col-12 pt-3">
-            <label>Rol:</label>
+            <label>Rol:</label> <br><br>
             <select
               class="form-control minimal"
               name="roles"
