--- a/src/app/modules/user/components/user/user.component.html
+++ b/src/app/modules/user/components/user/user.component.html
@@ -36,7 +36,7 @@
           <td>
             {{ user.role }}
           </td>
-          <td class="text-center">
+          <td class="text-center pt-3 pb-3">
             <a
               class="btn btn-global"
               [routerLink]="['/usuario/editar', user?.id]"
