--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<router-outlet></router-outlet>
+<nav class="navbar">
+  <ul class="nav-links">
+    <input type="checkbox" id="checkbox_toggle" />
+    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+
+    <div class="menu">
+      <li><a href="/usuario">Usuarios</a></li>
+      <li><a href="/rol">Roles</a></li>
+    </div>
+  </ul>
+</nav>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
