--- a/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="col-11">
-      ¿Está seguro que desea eliminar el {{ module }} <b>{{ data.name }}</b
+      ¿Está seguro que desea eliminar el {{ module }} <b>{{ data?.name }}</b
       >?
     </div>
   </div>
