Refactor y correcciones a pruebas de servicios

--- a/src/app/modules/role/components/role/role.component.html
+++ b/src/app/modules/role/components/role/role.component.html
@@ -48,6 +48,6 @@
   <app-confirmation-modal 
   [module]="'rol'"
   [data]="role"
-  (sendModalResponse)="listenModalButtons($event)"
+  (sendModalResponse)="listenConfirmationModalButtons($event)"
   ></app-confirmation-modal>
 </div>
