--- a/src/app/modules/user/components/user/user.component.html
+++ b/src/app/modules/user/components/user/user.component.html
@@ -60,6 +60,6 @@
   <app-confirmation-modal
     [module]="'usuario'"
     [data]="user"
-    (sendModalResponse)="listenModalButtons($event)"
+    (sendModalResponse)="listenConfirmationModalButtons($event)"
   ></app-confirmation-modal>
 </div>
