Refactor y pruebas para modal de confirmacion compartido

--- a/src/app/modules/user/components/user/user.component.html
+++ b/src/app/modules/user/components/user/user.component.html
@@ -58,8 +58,8 @@
 
 <div *ngIf="showModal">
   <app-confirmation-modal
-    [module]="'usuario'"
-    [data]="user"
+    [title]="title"
+    [message]="message"
     (sendModalResponse)="listenConfirmationModalButtons($event)"
   ></app-confirmation-modal>
 </div>
