--- a/src/app/modules/role/components/role/role.component.html
+++ b/src/app/modules/role/components/role/role.component.html
@@ -46,8 +46,8 @@
 
 <div *ngIf="showModal">
   <app-confirmation-modal 
-  [module]="'rol'"
-  [data]="role"
+  [title]="title"
+  [message]="message"
   (sendModalResponse)="listenConfirmationModalButtons($event)"
   ></app-confirmation-modal>
 </div>
