--- a/src/app/modules/user/components/user/user.component.html
+++ b/src/app/modules/user/components/user/user.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="col-3"></div>
   <div class="col-1">
-    <a routerLink="/usuario/nuevo" class="btn btn-global text-center">
+    <a routerLink="/usuario/nuevo" class="btn btn-global text-center" data-test="btn-new">
       + Nuevo
     </a>
   </div>
