--- a/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
@@ -26,7 +26,7 @@
       <button
         class="btn btn-global modal-buttons"
         (click)="cancel()"
-        data-test="btn-delete"
+        data-test="btn-cancel"
       >
         Cancelar
       </button>
