API para busquedas de roles y usuarios

--- a/src/app/modules/role/components/role/role.component.html
+++ b/src/app/modules/role/components/role/role.component.html
@@ -6,6 +6,7 @@
       class="form-control"
       type="text"
       placeholder="Busque un usuario por su nombre"
+      (keyup)="search($event)"
       [(ngModel)]="searchQuery"
     />
   </div>
@@ -26,7 +27,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let role of roles | searchFilter: searchQuery">
+        <tr *ngFor="let role of roles">
           <td>
             {{ role.name }}
           </td>
