--- a/src/app/modules/user/components/user-form/user-form.component.html
+++ b/src/app/modules/user/components/user-form/user-form.component.html
@@ -68,6 +68,70 @@
             </div>
           </div>
 
+          <div class="col-11 pt-3">
+            <label>Contraseña: </label> <br><br>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Ingresa la contraseña"
+              formControlName="password"
+              [ngClass]="{
+                'is-invalid':
+                  form.invalid && fc['password'].errors && fc['password'].touched
+              }"
+            />
+            <div
+              *ngIf="form.invalid && fc['password'].errors && fc['password'].touched"
+              class="invalid-feedback"
+            >
+              <div *ngIf="fc['password'].errors['required']">
+                La contraseña es obligatoria
+              </div>
+
+              <div *ngIf="fc['password'].errors['maxlength']">
+               La contraseña debe tener máximo 8 caracteres
+              </div>
+
+              <div *ngIf="fc['password'].hasError('hasNumber')">
+                La contraseña debe tener al menos un número
+              </div>
+
+              <div *ngIf="fc['password'].hasError('hasCapitalCase')">
+                La contraseña debe tener al menos una letra mayúscula
+              </div>
+
+              <div *ngIf="fc['password'].hasError('hasSpecialCharacter')">
+                La contraseña debe tener al menos un caracter especial
+              </div>
+            </div>
+          </div>
+
+          <div class="col-11 pt-3">
+            <label>Confirmar contraseña: </label> <br><br>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Vuelva a ingresar la contraseña"
+              formControlName="password_confirmation"
+              [ngClass]="{
+                'is-invalid':
+                  form.invalid && fc['password_confirmation'].errors && fc['password_confirmation'].touched
+              }"
+            />
+            <div
+              *ngIf="form.invalid && fc['password_confirmation'].errors && fc['password_confirmation'].touched"
+              class="invalid-feedback"
+            >
+              <div *ngIf="fc['password_confirmation'].errors['required']">
+                La confirmación de contraseña es obligatoria
+              </div>
+
+              <div *ngIf="fc['password_confirmation'].hasError('noMatch')">
+               Las contraseñas no coinciden
+              </div>
+            </div>
+          </div>
+
           <div class="col-12 pt-3">
             <label>Rol:</label> <br><br>
             <select
