--- a/src/app/modules/user/components/user-form/user-form.component.scss
+++ b/src/app/modules/user/components/user-form/user-form.component.scss
@@ -7,3 +7,7 @@ select.minimal {
   background-size: 5px 5px, 5px 5px, 1px 1.5em;
   background-repeat: no-repeat;
 }
+
+select[multiple] {
+  max-height: 70px;
+}
