Cambio en rutas y lista de headers en base a rol

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,8 +4,8 @@
     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
     <div class="menu">
-      <li><a href="/usuario">Usuarios</a></li>
-      <li><a href="/rol">Roles</a></li>
+      <li *ngFor="let option of filteredMenu"><a [href]="option.path">{{ option.name }}</a></li>
+      <li (click)="logout()">Cerrar sesión</li>
     </div>
   </ul>
 </nav>
